Task 4021. Comments for class RemoteCoordinatorImp.